added static folder, confirmed that info is going to database but messages not working

--- a/productized/signup/templates/signup/thankyou.html
+++ b/productized/signup/templates/signup/thankyou.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
 	<head>
-		<title>productized</title>
+		<title>thank you</title>
 	</head>
 
 	<body>
-		hello!
+		Thank you!
 	</body>
 
 
